# tmcr-newlogic-editor

./: CHANGELOG.md  lib.js  out.frefs.js  out.frefs.json  out.stats  shell.nix  tmcr-newlogic-editor.cabal
app/: Main.hs
static/: style.css
