cabal-version:      3.0
name:               tmcr-newlogic-editor
version:            0.1.0.0
-- synopsis:
-- description:
license:            AGPL-3.0-only
license-file:       LICENSE
author:             Ibot02
maintainer:         jtp.jtp@gmx.de
-- copyright:
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable tmcr-newlogic-editor
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.15.1.0
                    , tmcr-newlogic-lib
                    , containers
                    , miso
                    , polysemy
                    , text
    if !impl(ghcjs)
        build-depends:    jsaddle, jsaddle-warp, warp, websockets
    hs-source-dirs:   app
    default-language: Haskell2010
